# snakemake-logger-plugin-json

./: LICENSE  README.md  pixi.toml  pyproject.toml
src/snakemake_logger_plugin_json/: __init__.py  json.py  logger.py  models.py  stuff.py
src/snakemake_logger_plugin_json/app/: app.py  cli.py  debug.py  style.tcss  widgets.py
tests/: conftest.py  test_json.py  test_logging.py  test_models.py  test_workflow.py
tests/data/: .gitignore  Makefile
tests/workflow/: Snakefile
tests/workflow/input/: genome.fa
tests/workflow/input/samples/: A.fastq  B.fastq
tests/workflow/scripts/: error-script.py
