[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "snakemake-logger-plugin-json"
version = "0.1.0"
authors = [
  {name = "Jared Lumpe", email = "jared@jaredlumpe.com"},
]
description = "Snakemake logger plugin that emits JSON-formatted records."
readme = "README.md"


requires-python = ">=3.10"
dependencies = [
	"snakemake_interface_logger_plugins",
]


[project.urls]
Homepage = "https://github.com/jlumpe/snakemake-logger-plugin-json"
# Repository = "https://github.com/jlumpe/snakemake-logger-plugin-json"



# Pytest settings
[tool.pytest.ini_options]

# Run tests in tests/, obviously
# Also check docstrings in package
testpaths = [
	"tests",
	"snakemake_logger_plugin_json",
]

# Run doctests on all modules
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
