[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "snakemake-logger-plugin-json"
version = "0.1.0"
authors = [
  {name = "Jared Lumpe", email = "jared@jaredlumpe.com"},
]
description = "Snakemake logger plugin that emits JSON-formatted records."
readme = "README.md"


requires-python = ">=3.10"
dependencies = [
	"snakemake >= 9",
	"snakemake_interface_logger_plugins ~=1.0",
	"pydantic ~=2.0",
]

[project.optional-dependencies]
app = [
	"textual",
]


[project.scripts]
snakemake-log-viewer = "snakemake_logger_plugin_json.app.cli:main"


[project.urls]
Homepage = "https://github.com/jlumpe/snakemake-logger-plugin-json"
# Repository = "https://github.com/jlumpe/snakemake-logger-plugin-json"